fix: openSUSE changed to 13.2 to not confuse users. Line goes away on small screens

--- a/assets/css/responsive-utilities.less
+++ b/assets/css/responsive-utilities.less
@@ -39,6 +39,9 @@
         &:first-of-type {
           border-right: 0px solid transparent
         }
+        &:last-of-type {
+          border-left: 0px solid transparent
+        }
       }
     }
   }
